--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "gh-pages": "^3.2.3",
+    "instagram-login-react": "^2.0.0",
     "json-server": "^0.17.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-social-login": "^3.4.14",
+    "react-twitter-login": "^1.4.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
